# sd-card-media-ingest

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  DESIGN.md  INGEST_PLAN.md  LICENSE  README.md  flake.nix  ingest.toml
app/: lv_conf.h  model.h  proto.c  proto.h  ui.c  ui.h
deploy/: ingest.service  rclone-http.service  uploader.service
device/: CMakeLists.txt  main_device.c
device/lib/Config/: DEV_Config.c  DEV_Config.h
firmware/: CMakeLists.txt  main.c
firmware/lib/LCD/: LCD_1in47.c  LCD_1in47.h
host/: ingest.py  ingest.toml  ingest_config.py  ingest_copier.py  ingest_discovery.py  ingest_display.py  ingest_display.toml  ingest_emit.py  ingest_link.py  send_image.py  slots.py  uploader.py  wire.py
sim/: CMakeLists.txt  main_sim.c
tests/: check_ppm.py  test_ingest.py  test_proto.c
